deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aleph-validator-node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aleph-validator-node
  template:
    metadata:
      labels:
        app: aleph-validator-node
    spec:
      containers:
      - name: aleph-validator-node
        image: public.ecr.aws/p6e8q1z1/aleph-node:r-12.3
        ports:
        - containerPort: 30333
        - containerPort: 30343
        - containerPort: 9944
        - containerPort: 9615
        volumeMounts:
        - name: aleph-data
          mountPath: /data
      volumes:
      - name: aleph-data
        persistentVolumeClaim:
          claimName: aleph-validator-node-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: aleph-validator-node-svc
  annotations:
    kube-vip.io/loadbalancerIPs: "0.0.0.0"
    kube-vip.io/hwaddr: "00:00:6C:32:98:75"
    kube-vip.io/loadbalancerHostname: "aleph-validator-node"
spec:
  ports:
  - port: 30333
    targetPort: 30333
    protocol: TCP
    name: port
  - port: 30343
    targetPort: 30343
    protocol: TCP
    name: validator-port
  - port: 9944
    targetPort: 9944
    protocol: TCP
    name: rpc-port
  - port: 9615
    targetPort: 9615
    protocol: TCP
    name: metrics-port
  selector:
    app: aleph-validator-node
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aleph-validator-node-ingress
  annotations:
      nginx.ingress.kubernetes.io/proxy-body-size: 0
      nginx.org/websocket-services: "aleph-validator-node-svc"
spec:
  ingressClassName: nginx-ingress-prod
  tls:
    - hosts:
        - ws.aleph-validator-node.iosis.tech
      secretName: aleph-validator-node-tls
  rules:
    - host: ws.aleph-validator-node.iosis.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aleph-validator-node-svc
                port:
                  number: 9944
